@@ -8,7 +8,24 @@ use Math::Prime::Util qw/primes prime_count/;
 my $use64 = Math::Prime::Util::_maxbits > 32;
 my $extra = defined $ENV{RELEASE_TESTING} && $ENV{RELEASE_TESTING};
 
-plan tests => 12 + 1 + 19 + ($use64 ? 1 : 0) + 1;
+plan tests => 12+3 + 12 + 1 + 19 + ($use64 ? 1 : 0) + 1 + 13*6;
+
+ok(!eval { primes(undef); },   "primes(undef)");
+ok(!eval { primes("a"); },     "primes(a)");
+ok(!eval { primes(-4); },      "primes(-4)");
+ok(!eval { primes(2,undef); }, "primes(2,undef)");
+ok(!eval { primes(2,'x'); },   "primes(2,x)");
+ok(!eval { primes(2,-4); },    "primes(2,-4)");
+ok(!eval { primes(undef,7); }, "primes(undef,7)");
+ok(!eval { primes('x',7); },   "primes(x,7)");
+ok(!eval { primes(-10,7); },   "primes(-10,7)");
+ok(!eval { primes(undef,undef); },  "primes(undef,undef)");
+ok(!eval { primes('x','x'); }, "primes(x,x)");
+ok(!eval { primes(-10,-4); },  "primes(-10,-4)");
+
+ok(!eval { primes(50000000000000000000); },  "primes(inf)");
+ok(!eval { primes(2,50000000000000000000); },  "primes(2,inf)");
+ok(!eval { primes(50000000000000000000,50000000000000000001); },  "primes(inf,inf)");
 
 my @small_primes = qw/
 2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 61 67 71
@@ -94,3 +111,20 @@ if ($use64) {
 }
 
 is( scalar @{primes(474973,838390)}, prime_count(838390) - prime_count(474973), "count primes within a range" );
+
+
+foreach my $method (qw/trial erat simple segment sieve dynamic/) {
+  is_deeply( primes({method=>$method}, 0, 3572), \@small_primes, "Primes between 0 and 3572" );
+  is_deeply( primes({method=>$method}, 2, 20), [2,3,5,7,11,13,17,19], "Primes between 2 and 20" );
+  is_deeply( primes({method=>$method}, 30, 70), [31,37,41,43,47,53,59,61,67], "Primes between 30 and 70" );
+  is_deeply( primes({method=>$method}, 30, 70), [31,37,41,43,47,53,59,61,67], "Primes between 30 and 70" );
+  is_deeply( primes({method=>$method}, 20, 2), [], "Primes between 20 and 2" );
+  is_deeply( primes({method=>$method}, 1, 1), [], "Primes ($method) between 1 and 1" );
+  is_deeply( primes({method=>$method}, 2, 2), [2], "Primes ($method) between 2 and 2" );
+  is_deeply( primes({method=>$method}, 3, 3), [3], "Primes ($method) between 3 and 3" );
+  is_deeply( primes({method=>$method}, 2010733, 2010733+148), [2010733,2010733+148], "Primegap 21 inclusive" );
+  is_deeply( primes({method=>$method}, 2010733+1, 2010733+148-2), [], "Primegap 21 exclusive" );
+  is_deeply( primes({method=>$method}, 3088, 3164), [3089,3109,3119,3121,3137,3163], "Primes between 3088 and 3164" );
+  is_deeply( primes({method=>$method}, 3089, 3163), [3089,3109,3119,3121,3137,3163], "Primes between 3089 and 3163" );
+  is_deeply( primes({method=>$method}, 3090, 3162), [3109,3119,3121,3137], "Primes between 3090 and 3162" );
+}
